--- a/index1.html
+++ b/index1.html
@@ -64,7 +64,7 @@
                   <li>
                     <a href="#portfolio" class="st-smooth-move">Projects</a>
                   </li>
-                  <li><a href="#blog" class="st-smooth-move">Blog</a></li>
+                  <!-- <li><a href="#blog" class="st-smooth-move">Blog</a></li> -->
                   <li><a href="#contact" class="st-smooth-move">Contact</a></li>
                 </ul>
                 <div class="sp-phone">
@@ -110,7 +110,7 @@
       <div class="st-hero-img st-to-right">
         <img
           class="wow fadeInRight"
-          src="assets/img/section/hero-img.jpg"
+          src="assets/img/section/abcde.jpg"
           alt="Hero"
         />
         <div class="st-social-group wow fadeInLeft">
@@ -181,7 +181,7 @@
             <div class="st-about-img-wrap">
               <div
                 class="st-about-img st-dynamic-bg st-bg"
-                data-src="assets/img/section/about.jpg"
+                data-src="assets/img/section/khan.jpg"
               ></div>
             </div>
             <div class="st-height-b0 st-height-lg-b30"></div>
@@ -217,7 +217,9 @@
                     <li><span>Freelance</span> : <span>Available</span></li>
                   </ul>
                   <div class="st-text-block-btn">
-                    <a href="#" class="st-btn st-style1 st-color1"
+                    <a
+                      href="assets/img/Abeer.pdf"
+                      class="st-btn st-style1 st-color1"
                       >Download CV</a
                     >
                   </div>
@@ -1005,12 +1007,13 @@
           <div class="col-lg-6">
             <h3 class="st-contact-title">Just say Hello</h3>
             <div id="st-alert"></div>
-            <form
-              action="#"
+            <!-- <form
+              action="https://formspree.io/f/xnqeorwd"
               method="POST"
               class="st-contact-form"
               id="contact-form"
-            >
+            > -->
+            <form action="https://formspree.io/f/mwkgwzze" method="POST">
               <div class="st-form-field">
                 <input
                   type="text"
@@ -1094,7 +1097,7 @@
               </div>
               <div class="st-social-info">
                 <div class="st-social-text">
-                  Visite my social profile and get connected
+                  Visit my social profile and get connected.
                 </div>
                 <div class="st-social-link">
                   <a
@@ -1146,11 +1149,14 @@
       <div class="container">
         <div class="st-copyright-wrap text-center">
           <div class="st-copyright-text">
-            © 2024. Designed by M Abeer. All right reserved.
+            © 2024. Developed by
+            <a href="https://www.linkedin.com/in/abeer33/">M Abeer</a>. All
+            right reserved.
           </div>
         </div>
       </div>
     </footer>
+
     <!-- End Footer Seciton -->
 
     <!-- Scripts -->
